--- a/Style.css
+++ b/Style.css
@@ -176,8 +176,8 @@ section{
 }
 
 .profile-pic{
-    width:300px;
-    height:300px;
+    width:330px;
+    height:330px;
     background-position: 50%;
     box-shadow: 0 0 0 9px #846cff90;
     border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
@@ -234,6 +234,8 @@ section{
 
 .about-pic{
     width:300px;
+    object-fit: cover;
+
     border-radius: 30px;
 }
 
