--- a/Style.css
+++ b/Style.css
@@ -46,7 +46,8 @@ html{
     text-decoration: none;
 }
 body{
-    background-color:var(--bg-color);
+    /* background-color:var(--bg-color); */
+    background-color:#1d1d2b;  /*dark theme found*/
     background-color:#f8f9fa;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -286,7 +287,7 @@ section{
     align-items: center;
     justify-content: center;
     gap:3rem;
-    min-height: 60dvh;
+    min-height: 40dvh;
     padding: 2rem 1rem;
 }
 
@@ -342,7 +343,7 @@ section{
     align-items: center;
     place-items: center;
     padding: 2rem 0;
-    min-height: 70dvh;   
+    /* min-height: 70dvh;    */
 }
 
 .project-card{
@@ -357,7 +358,7 @@ section{
 }
 
 .project-card:hover{
-    margin-top: 10px;
+    transform: translateY(10px);
     box-shadow: 1px 1px 10px rgba(78, 144, 242, 0.575);
 }
 
