--- a/Style.css
+++ b/Style.css
@@ -632,6 +632,11 @@ footer{
     text-align: center;
     padding-top:5rem;
 }
+
+
+.copyright span{
+    color: var(--primary-color);
+}
 /* 
 Breakpoints :
 
