resume btn bg-clr change

--- a/Style.css
+++ b/Style.css
@@ -149,7 +149,7 @@ section{
     padding: 1.5rem 2rem;
     border-radius:10px;
     border:none;
-    background-color: rgba(0, 49, 122, 0.664);
+    background-color: #374151;
     font-size:var(--small-font);
     font-weight: var(--bold-size);
     color:#fff;
