--- a/Style.css
+++ b/Style.css
@@ -149,7 +149,7 @@ section{
     padding: 1.5rem 2rem;
     border-radius:10px;
     border:none;
-    background-color: #374151;
+    background-color: #424b58;
     font-size:var(--small-font);
     font-weight: var(--bold-size);
     color:#fff;
